@@ -1,3 +1,8 @@
+2007-10-03  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/commands/cmd_crop.c: Added with crop_sprite/layer/frame &
+	autocrop sprite.
+
 2007-09-30  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/commands/cmd_sprite_properties.c (command_execute_sprite_properties): Done.
